Corrected minor issue with scrollbar width

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 #playlist::-webkit-scrollbar,
 #instructions::-webkit-scrollbar
 {
-	width: 5px;
+	width: 9px;
 	background-color: #F5F5F5;
 }
 
